Fxied naming and other bug fixes
