# internal/api/oas_schemas_gen.go
@@ -467,6 +467,52 @@ func (o OptDateTime) Or(d time.Time) time.Time {
 	return d
 }
 
+// NewOptInt32 returns new OptInt32 with value set to v.
+func NewOptInt32(v int32) OptInt32 {
+	return OptInt32{
+		Value: v,
+		Set:   true,
+	}
+}
+
+// OptInt32 is optional int32.
+type OptInt32 struct {
+	Value int32
+	Set   bool
+}
+
+// IsSet returns true if OptInt32 was set.
+func (o OptInt32) IsSet() bool { return o.Set }
+
+// Reset unsets value.
+func (o *OptInt32) Reset() {
+	var v int32
+	o.Value = v
+	o.Set = false
+}
+
+// SetTo sets value to v.
+func (o *OptInt32) SetTo(v int32) {
+	o.Set = true
+	o.Value = v
+}
+
+// Get returns value and boolean that denotes whether value was set.
+func (o OptInt32) Get() (v int32, ok bool) {
+	if !o.Set {
+		return v, false
+	}
+	return o.Value, true
+}
+
+// Or returns value if set, or given parameter if does not.
+func (o OptInt32) Or(d int32) int32 {
+	if v, ok := o.Get(); ok {
+		return v
+	}
+	return d
+}
+
 // NewOptString returns new OptString with value set to v.
 func NewOptString(v string) OptString {
 	return OptString{
@@ -546,9 +592,9 @@ func (s *TokenRequest) SetToken(val string) {
 // Contains a plaintext token as well as optional properties.
 // Ref: #/components/schemas/TokenResponse
 type TokenResponse struct {
-	Scope     OptString   `json:"scope"`
-	Expiry    OptDateTime `json:"expiry"`
-	Plaintext string      `json:"plaintext"`
+	Scope  OptString   `json:"scope"`
+	Expiry OptDateTime `json:"expiry"`
+	Token  string      `json:"token"`
 }
 
 // GetScope returns the value of Scope.
@@ -561,9 +607,9 @@ func (s *TokenResponse) GetExpiry() OptDateTime {
 	return s.Expiry
 }
 
-// GetPlaintext returns the value of Plaintext.
-func (s *TokenResponse) GetPlaintext() string {
-	return s.Plaintext
+// GetToken returns the value of Token.
+func (s *TokenResponse) GetToken() string {
+	return s.Token
 }
 
 // SetScope sets the value of Scope.
@@ -576,9 +622,9 @@ func (s *TokenResponse) SetExpiry(val OptDateTime) {
 	s.Expiry = val
 }
 
-// SetPlaintext sets the value of Plaintext.
-func (s *TokenResponse) SetPlaintext(val string) {
-	s.Plaintext = val
+// SetToken sets the value of Token.
+func (s *TokenResponse) SetToken(val string) {
+	s.Token = val
 }
 
 func (*TokenResponse) newActivationTokenRes()    {}
